[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/fonts/Botones/Hannover Messe Sans.otf" type="DynamicFontData" id=1]
[ext_resource path="res://escenas/Personajes/Jeanne.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/img/Sprites/Jefe.png" type="Texture" id=3]
[ext_resource path="res://assets/img/barras/Salter Empty.png" type="Texture" id=4]
[ext_resource path="res://assets/img/barras/Salter Full.png" type="Texture" id=5]
[ext_resource path="res://escenas/Batalla/ParallaxBatalla.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Batalla.gd" type="Script" id=7]
[ext_resource path="res://assets/img/barras/Vida full.png" type="Texture" id=8]
[ext_resource path="res://assets/img/barras/Energia full.png" type="Texture" id=9]
[ext_resource path="res://assets/img/barras/Energia empty.png" type="Texture" id=10]
[ext_resource path="res://assets/img/barras/Vida empty.png" type="Texture" id=11]
[ext_resource path="res://scripts/Acciones.gd" type="Script" id=12]
[ext_resource path="res://animaciones/DamageSalter.tres" type="Animation" id=13]
[ext_resource path="res://escenas/Batalla/GUI.png" type="Texture" id=14]
[ext_resource path="res://assets/img/botones/Batalla/Subfusil hover.png" type="Texture" id=15]
[ext_resource path="res://assets/img/botones/Batalla/Subfusil.png" type="Texture" id=16]
[ext_resource path="res://assets/img/botones/Batalla/Subfusil press.png" type="Texture" id=17]
[ext_resource path="res://assets/img/botones/Batalla/Embestida.png" type="Texture" id=18]
[ext_resource path="res://assets/img/botones/Batalla/Embestida press.png" type="Texture" id=19]
[ext_resource path="res://assets/img/botones/Batalla/Embestida hover.png" type="Texture" id=20]
[ext_resource path="res://assets/img/botones/Batalla/Granada press.png" type="Texture" id=21]
[ext_resource path="res://assets/img/botones/Batalla/Vida press.png" type="Texture" id=22]
[ext_resource path="res://assets/img/botones/Batalla/Vida hover.png" type="Texture" id=23]
[ext_resource path="res://assets/img/botones/Batalla/Granada hover.png" type="Texture" id=24]
[ext_resource path="res://assets/img/botones/Batalla/Vida.png" type="Texture" id=25]
[ext_resource path="res://assets/img/botones/Batalla/Granada.png" type="Texture" id=26]
[ext_resource path="res://animaciones/DamageJefe.tres" type="Animation" id=27]
[ext_resource path="res://assets/img/barras/Ultimaate empty.png" type="Texture" id=28]
[ext_resource path="res://assets/img/barras/Ultimate Full.png" type="Texture" id=29]
[ext_resource path="res://assets/img/barras/Ultimate.png" type="Texture" id=30]
[ext_resource path="res://animaciones/Ultimate.tres" type="Animation" id=31]

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Combate" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0

[node name="Dialogo" type="TextureRect" parent="GUI"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -288.0
margin_right = 26.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 258, 105 )
expand = true

[node name="Gui" type="Sprite" parent="GUI"]
position = Vector2( 933.75, 798 )
scale = Vector2( 1.51584, 1.92105 )
texture = ExtResource( 14 )

[node name="Acciones" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 12 )

[node name="Subfusil" type="TextureButton" parent="Acciones"]
margin_left = 387.0
margin_top = 678.0
margin_right = 687.0
margin_bottom = 783.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 15 )

[node name="Granada" type="TextureButton" parent="Acciones"]
margin_left = 391.0
margin_top = 789.0
margin_right = 691.0
margin_bottom = 894.0
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 24 )
texture_disabled = ExtResource( 21 )

[node name="Embestida" type="TextureButton" parent="Acciones"]
margin_left = 742.0
margin_top = 791.0
margin_right = 1042.0
margin_bottom = 896.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 20 )
texture_disabled = ExtResource( 19 )

[node name="Vida" type="TextureButton" parent="Acciones"]
margin_left = 742.0
margin_top = 681.0
margin_right = 1042.0
margin_bottom = 786.0
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )
texture_disabled = ExtResource( 22 )

[node name="Ultimate" type="TextureButton" parent="Acciones"]
margin_left = 1640.0
margin_top = 766.0
margin_right = 1877.0
margin_bottom = 1003.0
disabled = true

[node name="UltimateProgress" type="TextureProgress" parent="Acciones/Ultimate"]
margin_left = -437.0
margin_top = -63.0
margin_right = -203.0
margin_bottom = 151.0
texture_under = ExtResource( 28 )
texture_progress = ExtResource( 29 )
fill_mode = 8
radial_initial_angle = 180.0
nine_patch_stretch = true

[node name="TextUltimate" type="TextureRect" parent="Acciones/Ultimate"]
margin_left = -396.0
margin_top = 171.0
margin_right = -249.0
margin_bottom = 212.0
texture = ExtResource( 30 )
expand = true

[node name="Turno" type="Label" parent="Acciones"]
margin_left = 94.0
margin_top = 588.0
margin_right = 300.0
margin_bottom = 647.0
custom_fonts/font = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Acciones"]
root_node = NodePath("../..")
anims/DamageJefe = ExtResource( 27 )
anims/DamageSalter = ExtResource( 13 )
anims/Ultimate = ExtResource( 31 )

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Salir" type="Button" parent="Menu"]
visible = false
margin_left = 1636.0
margin_top = 877.0
margin_right = 1743.0
margin_bottom = 955.0
custom_fonts/font = SubResource( 4 )
text = "Salir"

[node name="RegresarMenu" type="Button" parent="Menu"]
visible = false
margin_left = 1587.0
margin_top = 767.0
margin_right = 1801.0
margin_bottom = 845.0
custom_fonts/font = SubResource( 4 )
text = "Regresar"

[node name="Personajes" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Jefe" type="TextureRect" parent="Personajes"]
margin_left = 95.0
margin_top = 717.0
margin_right = 300.0
margin_bottom = 953.0
texture = ExtResource( 3 )
expand = true
flip_h = true

[node name="Vida Jefe" type="TextureProgress" parent="Personajes"]
margin_left = 357.0
margin_top = 910.0
margin_right = 931.0
margin_bottom = 942.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true

[node name="lblVidajefe" type="Label" parent="Personajes/Vida Jefe"]
margin_left = 579.0
margin_top = -3.0
margin_right = 641.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "100 %"

[node name="EstaminaJefe" type="TextureProgress" parent="Personajes"]
margin_left = 441.0
margin_top = 954.0
margin_right = 825.0
margin_bottom = 984.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 9 )
nine_patch_stretch = true

[node name="lblEstamina" type="Label" parent="Personajes/EstaminaJefe"]
margin_left = 401.0
margin_top = -5.0
margin_right = 463.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
text = "100 %"

[node name="Jeanne" parent="Personajes" instance=ExtResource( 2 )]
position = Vector2( 1489, -21 )

[node name="VidaSalter" type="TextureProgress" parent="Personajes"]
margin_left = 988.0
margin_top = 35.0
margin_right = 1733.0
margin_bottom = 78.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="lblVidaSalter" type="Label" parent="Personajes/VidaSalter"]
margin_left = -56.0
margin_top = 45.0
margin_right = 1.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "100%"

[node name="ParallaxBackground" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="Acciones/Subfusil" to="Acciones" method="_on_Subfusil_pressed"]
[connection signal="pressed" from="Acciones/Granada" to="Acciones" method="_on_Granada_pressed"]
[connection signal="pressed" from="Acciones/Embestida" to="Acciones" method="_on_Embestida_pressed"]
[connection signal="pressed" from="Acciones/Vida" to="Acciones" method="_on_Vida_pressed"]
[connection signal="pressed" from="Acciones/Ultimate" to="Acciones" method="_on_Ultimate_pressed"]
[connection signal="pressed" from="Menu/Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="Menu/RegresarMenu" to="." method="_on_RegresarMenu_pressed"]
